force-app/main/default/objects/NI_Monthly_Performance__c/NI_Monthly_Performance__c.object-meta.xml
<CustomObject>
    <label>NI Monthly Performance</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NI Monthly Performance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NI Monthly Performances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>