force-app/main/default/objects/NI_Monthly_Performance__c/fields/Account_Suffix_Ref__c.field-meta.xml
<CustomField>
    <fullName>Account_Suffix_Ref__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account/Suffix/Ref</label>
    <length>33</length>
    <required>true</required>
    <type>Text</type>
</CustomField>