force-app/main/default/objects/NI_Monthly_Performance__c/fields/As_of_Date__c.field-meta.xml
<CustomField>
    <fullName>As_of_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>As of Date</label>
    <type>Date</type>
</CustomField>