force-app/main/default/objects/NI_Monthly_Performance__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NI Monthly Performances</relationshipLabel>
    <relationshipName>NI_Monthly_Performances</relationshipName>
    <type>Lookup</type>
</CustomField>