force-app/main/default/objects/NI_Monthly_Performance__c/fields/DPA__c.field-meta.xml
<CustomField>
    <fullName>DPA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DPA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>