force-app/main/default/objects/NI_Monthly_Performance__c/fields/Fund_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Fund_Transfer__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fund Transfer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>