force-app/main/default/objects/NI_Monthly_Performance__c/fields/Gross_Rate_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Gross_Rate_Deposit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Gross Rate (Deposit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>