force-app/main/default/objects/NI_Monthly_Performance__c/fields/Interest_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Interest_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>