force-app/main/default/objects/NI_Monthly_Performance__c/fields/isUpdateToMFISuccess__c.field-meta.xml
<CustomField>
    <fullName>isUpdateToMFISuccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isUpdateToMFISuccess</label>
    <type>Checkbox</type>
</CustomField>