force-app/main/default/objects/NI_Monthly_Performance__c/fields/Origination_Date__c.field-meta.xml
<CustomField>
    <fullName>Origination_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Origination Date</label>
    <type>Date</type>
</CustomField>