force-app/main/default/objects/NI_Monthly_Performance__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>NI Monthly Performances</relationshipLabel>
    <relationshipName>NI_Monthly_Performances</relationshipName>
    <type>Lookup</type>
</CustomField>