force-app/main/default/objects/NI_Monthly_Performance__c/fields/Product_Key__c.field-meta.xml
<CustomField>
    <fullName>Product_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>