force-app/main/default/objects/NI_Monthly_Performance__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>