force-app/main/default/objects/NI_Monthly_Performance__c/fields/SABS_Type__c.field-meta.xml
<CustomField>
    <fullName>SABS_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SABS Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>