force-app/main/default/objects/NI_Monthly_Performance__c/fields/TMB_Hold_Commitment__c.field-meta.xml
<CustomField>
    <fullName>TMB_Hold_Commitment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TMB Hold Commitment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>