force-app/main/default/objects/NI_Monthly_Performance__c/fields/TMB_Suffix__c.field-meta.xml
<CustomField>
    <fullName>TMB_Suffix__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB Suffix</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>