force-app/main/default/objects/NI_Monthly_Performance__c/fields/Unused_Balance__c.field-meta.xml
<CustomField>
    <fullName>Unused_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unused Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>