force-app/main/default/objects/NI_Monthly_Performance__c/fields/YearMonthAcctSuffRef__c.field-meta.xml
<CustomField>
    <fullName>YearMonthAcctSuffRef__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>YearMonthAcctSuffRef</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>